<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFEE58">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:id="@+id/textView"
        android:gravity="center"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textSize="25sp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/app1"
            android:id="@+id/button"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:background="#ff80b719"
            android:onClick="announceToast"
            android:layout_marginBottom="7dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/app2"
            android:id="@+id/button2"
            android:layout_below="@id/button"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:background="#F44336"
            android:onClick="announceToast"
            android:layout_marginBottom="7dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/app3"
            android:id="@+id/button3"
            android:layout_below="@id/button2"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:background="#795548"
            android:textColor="#FFFFFF"
            android:onClick="announceToast"
            android:layout_marginBottom="7dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/app4"
            android:id="@+id/button4"
            android:layout_below="@id/button3"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:background="#03A9F4"
            android:onClick="announceToast"
            android:layout_marginBottom="7dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/app5"
            android:id="@+id/button5"
            android:layout_below="@id/button4"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:background="#FF5722"
            android:onClick="announceToast"
            android:layout_marginBottom="7dp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/app6"
            android:id="@+id/button6"
            android:layout_below="@id/button5"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:background="#000000"
            android:onClick="announceToast"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</RelativeLayout>
